--- a/Opdracht7/codes_keuzedeelwebsite/keuzedeel_opdracht3_contact.html
+++ b/Opdracht7/codes_keuzedeelwebsite/keuzedeel_opdracht3_contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="keuzedeel_opdracht3.css">
-    <title>Contact Pagina Keuzedeel Opdracht 3 Furkan Kara</title>
+    <title>Projects Pagina Keuzedeel Opdracht 3 Furkan Kara</title>
 </head>
 <body>
     <section>
@@ -32,16 +32,35 @@
                 </nav>
             </header>
     </section>
-    <!--Main Contact Pagina-->
     <main>
-        <section>
-            <label id="contactlabel">Contact:</label>
-            <br>
-            <p id="contacttekst">School e-mailadres: 9007365@student.zadkine.nl<br>
-            <a href="https://github.com/FkArA9708">Github:  https://github.com/FkArA9708</a>
-            </p>
+        <section class="content">
+            <h1>Contact Formulier</h1>
+
+            <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
+                <input type="hidden" name="access_key" value="67c58e8a-25ea-493a-8f58-dc7679259e45" />
+
+                <div class="form-group">
+                    <label for="name">Naam:</label>
+                    <input type="text" id="name" name="name" placeholder="Schrijf je naam op" required />
+                </div>
+
+                <div class="form-group">
+                    <label for="email">E-mailadres:</label>
+                    <input type="email" id="email" name="email" placeholder="Schrijf je mail adres" required />
+                </div>
+
+                <div class="form-group">
+                    <label for="message">Bericht:</label>
+                    <textarea id="message" name="message" placeholder="Schrijf hier je bericht op" required></textarea>
+                </div>
+
+                <div class="form-submit">
+                    <button type="submit">Verzenden</button>
+                </div>
+            </form>
         </section>
     </main>
+
      <!--Footer Homepage-->
      <section>
         <footer id="footer-homepage-projectpagina">
