--- a/Opdracht8/keuzedeel_opdracht3.html
+++ b/Opdracht8/keuzedeel_opdracht3.html
@@ -13,7 +13,7 @@
     <header id="header-homepage">
         <nav class="navbar-homepage" role="navigation">
             <div class="nav-content">
-                <p id="logo"><a href="index.html" aria-label="Ga naar de homepage">Furkan Kara</a></p>
+                <p id="logo"><a href="keuzedeel_opdracht3.html" aria-label="Ga naar de homepage">Furkan Kara</a></p>
                 
                 <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Navigatie menu openen/sluiten">
                 <label for="nav-toggle" class="nav-toggle-label">
