--- a/Opdracht8/keuzedeel_opdracht3_aboutpage.html
+++ b/Opdracht8/keuzedeel_opdracht3_aboutpage.html
@@ -60,7 +60,7 @@
         </article>
             <br>
             <br>
-        <label id="kennis">Kennis en Ervaringen:</label>
+        <label id="kennis">Kennis en Vaardigheden:</label>
         <br>
         <article id="kennistekst_aboutpage">
             <li>Programmeren</li>
